# StSDatabase

./: .gitignore  README.md  pyproject.toml  toolset.py
.github/workflows/: publish.yml
Data/: relic_availability.csv
Datos/: card.csv  card_upgrade.csv  play.csv  relic.csv
stsdb/: __init__.py  cli.py  core.py
stsdb/data/: hero.csv
tests/: test_stsdb.py
