[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stsdb"
version = "0.1.1"
description = "Deterministic Slay the Spire card and relic query toolset"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Taardisaa" }
]
keywords = ["slay-the-spire", "database", "cards", "relics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
stsdb = "stsdb.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["stsdb*"]

[tool.setuptools.package-data]
stsdb = ["data/*.csv"]
